--- a/app/assets/stylesheets/room_status_filter.scss
+++ b/app/assets/stylesheets/room_status_filter.scss
@@ -1,9 +1,10 @@
 
 .filter-wrapper {
-  display: flex;
-  flex-direction: row;
+  //display: flex;
+  //flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
+  text-align: center;
+  //flex-wrap: wrap;
   cursor: pointer;
 }
 
@@ -16,24 +17,18 @@
   padding: 10px 20px 10px 20px;
   max-width: 120px;
 }
-//[id="status1"] {
-//  background-color: red !important;
-//}
-//[id="status2"] {
-//  background-color: red !important;
-//}
-//[id="status3"] {
-//  background-color: red !important;
-//}
-//[id="status4"] {
-//  background-color: red !important;
-//}
-//[id="status5"] {
-//  background-color: red !important;
-//}
-//[id="status6"] {
-//  background-color: red !important;
-//}
-//[id="status7"] {
-//  background-color: red !important;
-//}
+[id="status1"] {
+  background-color: #ffc8dd !important;
+}
+[id="status2"] {
+  background-color: #00b4d8 !important;
+}
+[id="status3"] {
+  background-color: #ff6b35 !important;
+}
+[id="status4"] {
+  background-color: #ffc300 !important;
+}
+[id="status5"] {
+  background-color: #b4c5e4 !important;
+}
