--- a/app/views/room_diagram/_room_status.html.erb
+++ b/app/views/room_diagram/_room_status.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'room_status_filter' %>
-<div class="filter-wrapper">
-  <%= link_to room_diagram_path(:room_status => "all"), id:"status1" do %>
+<div class="filter-wrapper row">
+  <%= link_to room_diagram_path(:room_status => "all"), id:"status", class: "col-md" do %>
     <span class="filter-item">
         Tất cả
     </span>
@@ -8,8 +8,9 @@
   <% index = 1 %>
   <% if @room_statuses %>
     <% @room_statuses.each do |rs| %>
+      <% color =  rs[:color] %>
       <% id = "status" + index.to_s %>
-      <%= link_to room_diagram_path(:room_status => index), id:id  do %>
+      <%= link_to room_diagram_path(:room_status => index), id:id, class: "col-md"  do %>
         <span class="filter-item">
             <%= rs[:text] %>
         </span>
