--- a/app/assets/stylesheets/room_status_filter.scss
+++ b/app/assets/stylesheets/room_status_filter.scss
@@ -6,10 +6,12 @@
   text-align: center;
   //flex-wrap: wrap;
   cursor: pointer;
+
 }
 
 .filter-wrapper a  {
   margin: 0 .5rem 0 .5rem;
+  //border: 1px solid #436bd5;
 
   background-color: #436bd5;
   color: white;
@@ -17,18 +19,29 @@
   padding: 10px 20px 10px 20px;
   max-width: 120px;
 }
+// Trống
 [id="status1"] {
-  background-color: #ffc8dd !important;
+  background-color: white !important;
+  color: #07153a !important;
 }
+
+// Đã đặt
 [id="status2"] {
-  background-color: #00b4d8 !important;
+  background-color: #fdc500 !important;
 }
+
+// Quá hạn
 [id="status3"] {
-  background-color: #ff6b35 !important;
+  background-color: #c1121f !important;
 }
+
+// Nhận phòng
 [id="status4"] {
-  background-color: #ffc300 !important;
+  background-color: #003049 !important;
 }
+
+// Bẩn
 [id="status5"] {
-  background-color: #b4c5e4 !important;
+  background-color: #fdf0d5 !important;
+  color: black !important
 }
