Adding count room status for more clearly

--- a/app/views/room_diagram/_room_status.html.erb
+++ b/app/views/room_diagram/_room_status.html.erb
@@ -2,7 +2,7 @@
 <div class="filter-wrapper row">
   <%= link_to room_diagram_path(:room_status => "all"), id:"status", class: "col-md" do %>
     <span class="filter-item">
-        Tất cả
+        Tất cả <br> (<%= Room.all.count %>)
     </span>
   <% end %>
   <% index = 1 %>
@@ -12,7 +12,8 @@
       <% id = "status" + index.to_s %>
       <%= link_to room_diagram_path(:room_status => index), id:id, class: "col-md"  do %>
         <span class="filter-item">
-            <%= rs[:text] %>
+          <% count = Room.where(status: index).count %>
+            <%= rs[:text] %> <br> (<%= count %>)
         </span>
         <% index +=1 %>
       <% end %>
