Styling room_diagram

--- a/app/assets/stylesheets/room_diagram.scss
+++ b/app/assets/stylesheets/room_diagram.scss
@@ -20,6 +20,10 @@ body {
   background-color: white;
 }
 
+.room_section {
+  background-color: white;
+  border-radius: 15px;
+}
 .room-wrapper {
   width: 250px;
   margin: 0 16px 20px 0;
