--- a/app/views/room_diagram/_rooms.html.erb
+++ b/app/views/room_diagram/_rooms.html.erb
@@ -24,59 +24,62 @@
             <% color = "#ffffff" %>
           <% end %>
           <div class="room-wrapper col-3" >
-            <div class="card" data-toggle="modal" data-target="#roomModal">
-              <div class="card-body" style="padding-bottom: 0;">
-                <div class="card-text row">
-                  <p class="col-md-6">
-                    <%= room.name %>
-                  </p>
-                  <div class="dropdown col-md-6 d-flex justify-content-end">
-                    <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">
-                        <span><i class="fa fa-bars"></i></span>
-                        Danh sách đặt phòng
-                      </a>
-                      <a class="dropdown-item" href="#">
-                        <span><i class="fa fa-calendar-alt"></i></span>
-                        Đặt phòng nhanh
-                      </a>
-                      <a class="dropdown-item" href="#">
-                        <span><i class="fa fa-user-plus"></i></span>
-                        Khách lẻ
-                      </a>
-                      <a class="dropdown-item" href="#">
-                        <span><i class="fa fa-broom"></i></span>
-                        Phòng bẩn
-                      </a>
+            <%= link_to room_diagram_quick_reserve_room_path(:room_id => room.id), remote: true, class: "col" do %>
+              <div class="card" data-toggle="modal" data-target="#roomModal">
+                <div class="card-body" style="padding-bottom: 0;">
+                  <div class="card-text row">
+                    <p class="col-6">
+                      <%= room.name %>
+                    </p>
+                    <div class="dropdown col-6 d-flex justify-content-end end-dropdown">
+                      <i class="fas fa-ellipsis-v" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">
+                          <span><i class="fa fa-bars"></i></span>
+                          Danh sách đặt phòng
+                        </a>
+                        <a class="dropdown-item" href="#">
+                          <span><i class="fa fa-calendar-alt"></i></span>
+                          Đặt phòng nhanh
+                        </a>
+                        <a class="dropdown-item" href="#">
+                          <span><i class="fa fa-user-plus"></i></span>
+                          Khách lẻ
+                        </a>
+                        <a class="dropdown-item" href="#">
+                          <span><i class="fa fa-broom"></i></span>
+                          Phòng bẩn
+                        </a>
+                      </div>
                     </div>
                   </div>
+                  <div class="card-text d-flex justify-content-center">
+                    <% index = room.status - 1 %>
+                    <span><i class="fa fa-user"  style="color: <%= @room_colors[index] %>"></i></span>
+                    <h5 class="child">
+                      <%= @room_statuses[index][:text] %>
+                    </h5>
+                  </div>
+                </div>
+                <hr>
+                <div class="card-body" style="padding-top: 0; ">
+                  <div class="d-flex order-btn">
+                    <div class="btn btn-primary">
+                      <%= link_to room_diagram_quick_reserve_room_path(:room_id => room.id), remote: true do %>
+                        Đặt nhanh
+                      <% end %>
+                    </div>
+                    <div class="btn btn-primary">
+                      <%= link_to room_diagram_quick_reserve_room_path(:room_id => room.id), remote: true do %>
+                        Khách lẻ
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-                </div>
-                <div class="card-text d-flex justify-content-center">
-                  <% index = room.status - 1 %>
-                  <span><i class="fa fa-user"  style="color: <%= @room_colors[index] %>"></i></span>
-                  <h5 class="child">
-                    <%= @room_statuses[index][:text] %>
-                  </h5>
-                </div>
-              </div>
-              <hr style="">
-              <div class="card-body" style="padding-top: 0; ">
-                <div class="d-flex order-btn">
-                  <div class="btn btn-primary">
-                    <%= link_to room_diagram_quick_reserve_room_path(:room_id => room.id), remote: true do %>
-                      Đặt nhanh
-                    <% end %>
-                  </div>
-                  <div class="btn btn-primary">
-                    <%= link_to room_diagram_quick_reserve_room_path(:room_id => room.id), remote: true do %>
-                      Khách lẻ
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
+
+            <% end %>
             <div class="reservation-list">
               <div class="d-flex justify-content-center">Danh sách đặt phòng gần đây</div>
             </div>
