Config route for modal info

--- a/app/views/room_diagram/room_info.js.erb
+++ b/app/views/room_diagram/room_info.js.erb
@@ -1,2 +1,2 @@
-$("body").append("<%= escape_javascript(render "modal", :formats => [:html]) %>");
-$("#quickResModal").modal();
+$("body").append("<%= escape_javascript(render "room_info", :formats => [:html]) %>");
+$("#roomModal").modal();
