--- a/app/views/room_diagram/_room_info.html.erb
+++ b/app/views/room_diagram/_room_info.html.erb
@@ -46,3 +46,11 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#roomModal').on('hidden.bs.modal', function () {
+            $('#roomModal').remove()
+        })
+    })
+
+</script>
