Passing room info to room_info_modal Change room status when reserve room Ordering rooms by id

--- a/app/views/room_diagram/_room_info.html.erb
+++ b/app/views/room_diagram/_room_info.html.erb
@@ -7,8 +7,8 @@
   </div>
   <div class="modal-bottom" role="document">
 
-    <h3>Phòng A102</h3>
-    <p>Trạng thái: đã nhận</p>
+    <h3>Phòng <%= @room_name %></h3>
+    <p>Trạng thái: <%= @room_status_name %></p>
     <table class="table">
       <tbody>
       <tr>
