--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -192,7 +192,7 @@ a[data-toggle="collapse"] {
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
-    background-color: #f3f5ff
+    background-color: #F0F2F5
 }
 
 .btn.btn-primary {
