--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>Editing Employee</h1>
+<center><h1 class="title">Chỉnh sửa thông tin nhân viên</h1></center>
 
 <%= render 'form', employee: @employee %>
 
-<button class="button_back"><%= link_to 'Back', employees_path %></button>
-<button class="button_show"><%= link_to 'Show', @employee %></button>
+<button class="button_back"><%= link_to 'Quay lại', employees_path %></button>
+<button class="button_show"><%= link_to 'Xem', @employee %></button>
 
 
 
