--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,5 +1,5 @@
-<center><h1>New Employee</h1></center>
+<center><h1 class="title">Tạo nhân viên mới</h1></center>
 
 <%= render 'form', employee: @employee %>
 
-<button class="button_back"><%= link_to 'Back', employees_path %></button>
+<button class="button_back"><%= link_to 'Quay lại', employees_path %></button>
