--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Client</h1>
+<center><h1 class="title">Tạo khách hàng mới</h1></center>
 
 <%= render 'form', client: @client %>
 
-<%= link_to 'Back', clients_path %>
+<button class="button_back"><%= link_to 'Quay lại', clients_path %></button>
