--- a/app/views/room_types/show.html.erb
+++ b/app/views/room_types/show.html.erb
@@ -1,17 +1,19 @@
-<p id="notice"><%= notice %></p>
+<center>
+  <p id="notice"><%= notice %></p>
 
-<div class="show_container tColumn">
-<p class="tRow">
-  <strong class="show_roomtype_name">Name:</strong>
-  <strong class="show_sign">:</strong>
-  <%= @room_type.name %>
-</p>
+  <div class="show_container tColumn">
+  <p class="tRow">
+    <strong class="show_roomtype_name">Name:</strong>
+    <strong class="show_sign">:</strong>
+    <%= @room_type.name %>
+  </p>
 
-<p class="tRow">
-  <strong class="show_roomtype_name">Description</strong>
-  <strong class="show_sign">:</strong>
-  <%= @room_type.description %>
-</p>
-</div>
-<button class="button_back"><%= link_to 'Back', room_types_path %></button>
-<button class="button_edit"><%= link_to 'Edit', edit_room_type_path(@room_type) %></button>
+  <p class="tRow">
+    <strong class="show_roomtype_name">Description</strong>
+    <strong class="show_sign">:</strong>
+    <%= @room_type.description %>
+  </p>
+  </div>
+  <button class="button_back"><%= link_to 'Back', room_types_path %></button>
+  <button class="button_edit"><%= link_to 'Edit', edit_room_type_path(@room_type) %></button>
+</center>
